syntax = "proto3";
package v1;
option go_package = "github.com/cossim/coss-interface/service/relation/api/v1";
import "google/protobuf/empty.proto";

message CreateDialogRequest {
  //  @inject_tag: json:"owner_id"
  string OwnerId = 1;
  //  @inject_tag: json:"type"
  uint32 Type = 2;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 3;
}

message CreateDialogResponse {
  //  @inject_tag: json:"id"
  uint32 Id = 1;
  //  @inject_tag: json:"owner_id"
  string OwnerId = 2;
  //  @inject_tag: json:"type"
  uint32 Type = 3;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;
}


message JoinDialogRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
}
message JoinDialogResponse {}


message GetUserDialogListRequest {
  //  @inject_tag: json:"user_id"
  string UserId = 1;
}
message GetUserDialogListResponse {
  //  @inject_tag: json:"dialog_ids"
  repeated uint32 DialogIds = 1;
}

message GetDialogByIdsRequest {
  //  @inject_tag: json:"dialog_ids"
  repeated uint32 DialogIds = 1;
}
message GetDialogByIdsResponse {
  //  @inject_tag: json:"dialogs"
  repeated Dialog Dialogs = 1;
}

message Dialog {
  //  @inject_tag: json:"id"
  uint32 Id = 1;
  //  @inject_tag: json:"owner_id"
  string OwnerId = 2;
  //  @inject_tag: json:"type"
  uint32 Type = 3;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;
  //  @inject_tag: json:"create_at"
  int64 CreateAt = 5;
}


message GetDialogUsersByDialogIDRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}
message GetDialogUsersByDialogIDResponse {
  //  @inject_tag: json:"user_ids"
  repeated string UserIds = 1;
}


message DeleteDialogByIdsRequest {
  //  @inject_tag: json:"dialog_ids"
  repeated uint32 DialogIds = 1;
}
message DeleteDialogByIdsResponse {}


message DeleteDialogByIdRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}
message DeleteDialogByIdResponse {}


message DeleteDialogUsersByDialogIDRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}
message DeleteDialogUsersByDialogIDResponse {}

message GetDialogUserByDialogIDAndUserIdRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
}
message GetDialogUserByDialogIDAndUserIdResponse {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
  //  @inject_tag: json:"is_show"
  uint32 IsShow = 3;
  //  @inject_tag: json:"top_at"
  uint64 TopAt = 4;
}

message DeleteDialogUserByDialogIDAndUserIDRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
}
message DeleteDialogUserByDialogIDAndUserIDResponse {}


message GetDialogByGroupIdRequest {
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 1;
}

message GetDialogByGroupIdResponse {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 2;
  //  @inject_tag: json:"type"
  uint32 Type = 3;
  //  @inject_tag: json:"is_show"
  uint32 IsShow = 4;
  //  @inject_tag: json:"top_at"
  uint64 TopAt = 5;
  //  @inject_tag: json:"create_at"
  int64 CreateAt = 6;
}

message GetDialogByGroupIdsRequest {
  //  @inject_tag: json:"group_id"
  repeated uint32 GroupId = 1;
}

message GetDialogByGroupIdsResponse {
  //  @inject_tag: json:"dialogs"
  repeated GetDialogByGroupIdResponse Dialogs = 1;
}

message ConfirmFriendAndJoinDialogRequest {
  //  @inject_tag: json:"owner_id"
  string OwnerId = 1;  // 创建者id
  //  @inject_tag: json:"user_id"
  string UserId = 2;   // 对方用户id
  //  @inject_tag: json:"type"
  DialogType Type = 3; // 会话类型 (0:用户会话, 1:群组会话)
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;  // 群组id
}

message ConfirmFriendAndJoinDialogResponse {
  //  @inject_tag: json:"id"
  uint32 Id = 1;        // 会话id
  //  @inject_tag: json:"owner_id"
  string OwnerId = 2;   // 创建者id
  //  @inject_tag: json:"type"
  DialogType Type = 3;  // 会话类型 (0:用户会话, 1:群组会话)
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;   // 群组id
}

enum DialogType {
  USER_DIALOG = 0;  // 用户会话
  GROUP_DIALOG = 1; // 群组会话
}

message ConfirmFriendAndJoinDialogRevertRequest {
  //  @inject_tag: json:"owner_id"
  string OwnerId = 1;  // 创建者id
  //  @inject_tag: json:"user_id"
  string UserId = 2;   // 对方用户id
  //  @inject_tag: json:"type"
  DialogType Type = 3; // 会话类型 (0:用户会话, 1:群组会话)
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;  // 群组id
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 5;        // 会话id
}

message ConfirmFriendAndJoinDialogRevertResponse {}

message CreateAndJoinDialogWithGroupRequest {
    //  @inject_tag: json:"owner_id"
    string OwnerId = 1;   // 创建者id
    //  @inject_tag: json:"type"
    uint32 Type = 2;      // 会话类型 (用户会话=0, 群组会话=1)
    //  @inject_tag: json:"group_id"
    uint32 GroupId = 3;   // 群组id
    //  @inject_tag: json:"dialog_id"
    uint32 DialogId = 4;  // 会话id
    //  @inject_tag: json:"user_id"
    repeated string UserIds = 5;    // 对方用户id列表
}

message CreateAndJoinDialogWithGroupResponse {
  //  @inject_tag: json:"id"
  uint32 Id = 1;
  //  @inject_tag: json:"owner_id"
  string OwnerId = 2;   // 创建者id
  //  @inject_tag: json:"type"
  uint32 Type = 3;      // 会话类型 (用户会话=0, 群组会话=1)
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;   // 群组id
}

enum CloseOrOpenDialogType {
  CLOSE = 0;
  OPEN = 1;
}
enum TopOrCancelTopDialogType {
  CANCEL_TOP = 0;
  TOP = 1;
}

message CloseOrOpenDialogRequest {
  // @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  // @inject_tag: json:"user_id"
  string UserId = 2;
  // @inject_tag: json:"action"
  CloseOrOpenDialogType Action = 3;
}

message BatchCloseOrOpenDialogRequest {
  // @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  // @inject_tag: json:"user_ids"
 repeated string UserIds = 2;
  // @inject_tag: json:"action"
  CloseOrOpenDialogType Action = 3;
}



message TopOrCancelTopDialogRequest{
  // @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  // @inject_tag: json:"user_id"
  string UserId = 2;
  // @inject_tag: json:"action"
  TopOrCancelTopDialogType Action = 3;
}

message GetDialogByIdRequest{
  // @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}

message GetAllUsersInConversationRequest {
  // @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}

message GetAllUsersInConversationResponse {
  // @inject_tag: json:"user_ids"
  repeated string UserIds = 1;
}

message GetDialogTargetUserIdRequest {
  // @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  // @inject_tag: json:"user_id"
  string UserId = 2;
}

message GetDialogTargetUserIdResponse {
  // @inject_tag: json:"user_ids"
  repeated string UserIds = 1;
}

service DialogService {
  // CreateDialog 创建对话
  rpc CreateDialog(CreateDialogRequest) returns (CreateDialogResponse) {}

  // CreateAndJoinDialogWithGroup 创建群聊会话并加入
  rpc CreateAndJoinDialogWithGroup(CreateAndJoinDialogWithGroupRequest) returns (CreateAndJoinDialogWithGroupResponse) {}
  // CreateAndJoinDialogWithGroup回滚操作
  rpc CreateAndJoinDialogWithGroupRevert(CreateAndJoinDialogWithGroupRequest) returns (CreateAndJoinDialogWithGroupResponse) {}

  // 确认好友并加入对话
  rpc ConfirmFriendAndJoinDialog(ConfirmFriendAndJoinDialogRequest) returns (ConfirmFriendAndJoinDialogResponse) {}

  // ConfirmFriendAndJoinDialog回滚操作
  rpc ConfirmFriendAndJoinDialogRevert(ConfirmFriendAndJoinDialogRevertRequest) returns (ConfirmFriendAndJoinDialogRevertResponse) {}

  // 加入对话
  rpc JoinDialog(JoinDialogRequest) returns (JoinDialogResponse) {}

  // JoinDialog回滚操作
  rpc JoinDialogRevert(JoinDialogRequest) returns (JoinDialogResponse) {}

  // 获取用户对话列表
  rpc GetUserDialogList(GetUserDialogListRequest) returns (GetUserDialogListResponse) {}

  // 根据多个对话ID获取对话信息
  rpc GetDialogByIds(GetDialogByIdsRequest) returns (GetDialogByIdsResponse) {}
  // 根据对话id获取对话信息
  rpc GetDialogById(GetDialogByIdRequest) returns (Dialog) {}

  // 根据对话ID获取对话成员列表
  rpc GetDialogUsersByDialogID(GetDialogUsersByDialogIDRequest) returns (GetDialogUsersByDialogIDResponse) {}

  // 根据对话ID和用户ID获取对话成员信息
  rpc GetDialogUserByDialogIDAndUserID(GetDialogUserByDialogIDAndUserIdRequest) returns (GetDialogUserByDialogIDAndUserIdResponse) {}

  // 根据群组ID获取对话信息
  rpc GetDialogByGroupId(GetDialogByGroupIdRequest) returns (GetDialogByGroupIdResponse) {}
  rpc GetDialogByGroupIds(GetDialogByGroupIdsRequest) returns (GetDialogByGroupIdsResponse) {}

  // 根据对话ID列表删除对话
  rpc DeleteDialogByIds(DeleteDialogByIdsRequest) returns (DeleteDialogByIdsResponse) {}

  // 根据对话ID删除对话
  rpc DeleteDialogById(DeleteDialogByIdRequest) returns (DeleteDialogByIdResponse) {}

  // DeleteDialogById回滚操作
  rpc DeleteDialogByIdRevert(DeleteDialogByIdRequest) returns (DeleteDialogByIdResponse) {}

  // 根据对话ID删除对话成员
  rpc DeleteDialogUsersByDialogID(DeleteDialogUsersByDialogIDRequest) returns (DeleteDialogUsersByDialogIDResponse) {}

  // DeleteDialogUsersByDialogID回滚操作
  rpc DeleteDialogUsersByDialogIDRevert(DeleteDialogUsersByDialogIDRequest) returns (DeleteDialogUsersByDialogIDResponse) {}

  // 根据对话ID和用户ID删除对话成员
  rpc DeleteDialogUserByDialogIDAndUserID(DeleteDialogUserByDialogIDAndUserIDRequest) returns (DeleteDialogUserByDialogIDAndUserIDResponse) {}

  // DeleteDialogUserByDialogIDAndUserID回滚操作
  rpc DeleteDialogUserByDialogIDAndUserIDRevert(DeleteDialogUserByDialogIDAndUserIDRequest) returns (DeleteDialogUserByDialogIDAndUserIDResponse) {}

  //关闭或者打开对话
  rpc CloseOrOpenDialog(CloseOrOpenDialogRequest) returns (google.protobuf.Empty) {}

  //批量打开或关闭对话
  rpc BatchCloseOrOpenDialog(BatchCloseOrOpenDialogRequest) returns (google.protobuf.Empty) {}

  //置顶或者取消置顶对话
  rpc TopOrCancelTopDialog(TopOrCancelTopDialogRequest) returns (google.protobuf.Empty) {}

  //获取对话用户（包括已退出对话）
  rpc GetAllUsersInConversation(GetAllUsersInConversationRequest) returns (GetAllUsersInConversationResponse) {}

  //查询对话对方userId
  rpc GetDialogTargetUserId(GetDialogTargetUserIdRequest) returns (GetDialogTargetUserIdResponse) {}
}